--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
- 
+ <head>
+  <title>Sleepless-Program</title>
+  <link href="./style.css" type="text/css" rel="stylesheet">
+ </head>
 <body>
   <h1>Sleepless-Program</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
 </html>
