--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
  </head>
 <body>
   <h1>Sleepless-Program</h1>
-  <p>Welcome to my website!</p>
+  <p>Hi, My name is Lindsey and this is my first running website! I'm still learning and my goal is to add to this webpage
+    little by little until its really something to be proud of.
+  </p>
 </body>
  
 </html>
